[FIXES #22026435] mark as list or invisible

--- a/public/stylesheets/heypal.less
+++ b/public/stylesheets/heypal.less
@@ -2261,7 +2261,7 @@ h2.title {
   background: @red;
 }
 
-a[rel="twipsy"], a[rel="twipsy-link"]  {
+a[rel="twipsy"], a[rel="twipsy-link"], .place_status  {
   border:1px solid;
   border-radius:5px;
   margin-left:10px;
